--- a/MEAN/MEAN8/package.json
+++ b/MEAN/MEAN8/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.2",
     "rxjs": "~6.5.4",
