--- a/MEAN/MEAN8/package.json
+++ b/MEAN/MEAN8/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.2",
+    "nodemon": "^2.0.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
